# ads

./: .clang-format  .gitignore  CMakeLists.txt
core/: CMakeLists.txt
core/include/numeric/: biginteger.hpp
core/source/numeric/: biginteger.cpp
examples/: CMakeLists.txt  main.cpp
